@@ -35,7 +35,8 @@
 #include <cstring>
 #include <limits.h>
 #include "unwind-cxx.h"
-#include "gthr.h"
+#include "bits/c++config.h"
+#include "bits/gthr.h"
 
 using namespace __cxxabiv1;
 
